v20.04/de/_sources/optional.rst.txt
Optionale Softwaremodule

Der

rc_visard

 bietet optionale Softwaremodule, für die separat eine

Lizenz

 zur Aktivierung erworben werden kann.

Die optionalen Softwaremodule des

rc_visard

 sind:

SLAM (rc_slam, Abschnitt \ref{slam:sect-slam})  übernimmt die
simultane Lokalisierung und Kartenerstellung, um akkumulierte
Posendaten zu korrigieren. Die Trajektorie des rc_visard lässt sich
über die REST-API-Schnittstelle\:(Abschnitt \ref{rest_api:sect-rest-
api}) abfragen.

IOControl und Projektor-Kontrolle (rc_iocontrol, Abschnitt
\ref{iocontrol:sect-iocontrol})  bietet die Kontrolle über die Ein-
und Ausgänge des rc_visard mit speziellen Betriebsarten zur Kontrolle
eines externen Musterprojektors.

TagDetect (rc_april_tag_detect und rc_qr_code_detect, Abschnitt
\ref{tagdetect:sect-tag-detection})  ermöglicht die Erkennung von
AprilTags und QR-Codes sowie die Schätzung von deren Pose.

ItemPick und BoxPick (rc_itempick und rc_boxpick, Abschnitt
\ref{itempick:sect-itempick})  bietet eine Standardlösung für
robotische Pick-and-Place-Anwendungen für Vakuum-Greifsysteme.

SilhouetteMatch (rc_silhouettematch, Abschnitt \ref{silhouettematch
:sect-silhouettematch})  bietet eine Objekterkennungslösung für
Objekte, die sich auf einer Ebene befinden.

CollisionCheck (rc_collision_check, Abschnitt \ref{collisioncheck
:sect-collision})  bietet eine einfache Möglichkeit, auf Kollisionen
zwischen einem Greifer und einem Load Carrier zu prüfen.

